wrong position of footer fixed

--- a/assets/styles/library-components.css
+++ b/assets/styles/library-components.css
@@ -30,6 +30,9 @@
 
 body {
     background-color: var(--light);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 /* === FONTS === */
@@ -180,6 +183,7 @@ header img {
 .intro {
     max-width: 50%;
     justify-self: center;
+    align-self: center;
     text-align: center;
     margin: 3rem;
 }
@@ -191,16 +195,13 @@ footer {
     color: var(--light);
     height: 30vh;
     padding: 3rem;
+    margin-top: auto;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-
-    position: absolute;
-    bottom: 0;
-    width: 100vw;
 }
 
 footer a {
